fix the gap in the footer

--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -10,7 +10,7 @@
 }
 
 .container {
-  max-width: 1100px;
+  max-width: 1000px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
